process image and make prediction using model

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Classifier</title>
+    <link rel="stylesheet" href="static\index.css">
 </head>
 <body>
-    <h1>WELCOME</h1>
+    <h1>Image Classifier</h1>
     <p>Upload an image to classify!</p>
     
     <!-- This form submits the image to the /predict route, using the POST method, and enctype="multipart/form-data" allows us to upload files. -->
